--- a/src/components/SidebarContent.module.css
+++ b/src/components/SidebarContent.module.css
@@ -1,8 +1,18 @@
-.content {
-  width: 1000px;
+.scrollContainer > .content {
+  width: 2000px;
   max-width: 100%;
   margin: 0 auto;
   padding: var(--basis_x4);
+}
+@media (max-width: 2000px) {
+  .scrollContainer > .content {
+    width: 1500px;
+  }
+}
+@media (max-width: 1500px) {
+  .scrollContainer > .content {
+    width: 1200px;
+  }
 }
 
 .header {
@@ -93,5 +103,66 @@ h2 .emoji {
       display: flex;
       align-items: stretch;
     }
+  }
+}
+
+.startpage_cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: masonry;
+
+  gap: var(--basis_x4);
+}
+
+.startpage_cards .card {
+  /* justify-self: start; */
+  align-self: start;
+
+  background: rgba(var(--background-rgb),var(--alpha));
+  box-shadow: inset 0 0 0 1px rgba(var(--background-rgb),var(--alpha-more));
+
+  border-radius: var(--basis_x2);
+}
+@media (prefers-color-scheme: dark) {
+  .startpage_cards .card {
+    background: rgba(var(--on-background-contrast-rgb),var(--alpha-less));
+    box-shadow: inset 0 0 0 1px rgba(var(--on-background-contrast-rgb),var(--alpha-less));
+  }
+}
+.startpage_cards .card .content {
+  padding: 0;
+  margin: var(--basis_x4);
+}
+
+
+.startpage_cards .card.full_width {
+  grid-column-start: 1;
+  grid-column-end: 5;
+}
+@media (max-width: 1500px) {
+  .startpage_cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .startpage_cards .card.full_width {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+}
+@media (max-width: 1000px) {
+  .startpage_cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .startpage_cards .card.full_width {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+}
+@media (max-width: 700px) {
+  .startpage_cards {
+    grid-template-columns: 1fr;
+  }
+  .startpage_cards .card.full_width {
+    grid-column-start: 1;
+    grid-column-end: 2;
   }
 }
