feat: grid view in the List

--- a/src/components/view/ViewerLineAndCard.module.css
+++ b/src/components/view/ViewerLineAndCard.module.css
@@ -29,3 +29,26 @@
   color: var(--background);
   font-weight: bold;
 }
+
+.root {
+  display: flex;
+  align-items: flex-start;
+}
+
+.root[data-size='icon'] {
+  /* background: red !important; */
+  flex-direction: column;
+  align-items: center;
+  gap: var(--basis_x2);
+  passing: 0 var(--basis_x4);
+}
+.root[data-size='icon'] .icon {
+  width: var(--basis_x16) !important;
+  height: var(--basis_x16) !important;
+  margin: 0 !important;
+}
+
+.root[data-size='icon'] .content {
+  display: inline;
+  max-width: 100%;
+}
