--- a/src/components/view/BlockIcon.module.css
+++ b/src/components/view/BlockIcon.module.css
@@ -15,6 +15,43 @@
 .icon.round {
   border-radius: 100px;
 }
+.icon.text_document {
+  color: var(--on-background);
+  background: var(--background-contrast);
+
+  overflow: hidden;
+  height: var(--body-font-size) !important;
+  width: calc(0.8 * var(--body-font-size)) !important;
+
+  /* font-size: calc(0.08 * var(--body-font-size));
+  padding: calc(0.025 * var(--body-font-size)) calc(0.05 * var(--body-font-size));
+  line-height: calc(0.14 * var(--body-font-size)); */
+
+  font-family: monospace;
+  white-space: pre-wrap;
+  word-break: break-word;
+  font-size: calc(0.03 * var(--body-font-size));
+  padding: calc(0.08 * var(--body-font-size)) calc(0.08 * var(--body-font-size));
+  line-height: calc(0.05 * var(--body-font-size));
+  -webkit-text-stroke: 1px currentColor;
+}
+/* check for dark mode*/
+@media (prefers-color-scheme: dark) {
+  .icon.text_document {
+    color: var(--on-background);
+    background: var(--background-contrast);
+  }
+}
+.icon.text_document > div {
+  margin-block-end: calc(0.08 * var(--body-font-size));
+}
+.icon.text_document .coverphoto {
+  height: calc(0.25 * var(--body-font-size));
+  background-color: currentColor;
+  background-position: center;
+  background-size: cover;
+  opacity: var(--alpha);
+}
 .icon img {
   width: 100%;
   height: 100%;
