--- a/src/pages/App.module.css
+++ b/src/pages/App.module.css
@@ -1,15 +1,6 @@
-.app {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: flex-start;
-  /* text-align: center; */
-
+.root {
   min-height: 100vh;
 
   background: var(--background);
   color: var(--on-background);
-}
-.app.isStartpage {
-  background: var(--background-contrast);
 }
